fix(auth): 优化注册和登录方法的请求参数类型和返回值结构
Signed-off-by: xfei33 <3283245558@qq.com>